# products-monitoring

./: README.md  db.sqlite3  manage.py  pyproject.toml
groups/: models.py  views.py
products/: admin.py  models.py  urls.py  views.py
products_monitoring/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py
